Fix green homescreen button on smaller screens
Previous: https://sr.ht/qRFz.png

Now: https://sr.ht/FtOB.png

--- a/css/style.css
+++ b/css/style.css
@@ -128,7 +128,7 @@ pre code {
 	display: inline-block;
 	padding: 15px;
 	margin: 5px;
-	min-width: 330px;
+	min-width: 45%;
 }
 #splash .card strong {
 	display: block;
